Améliration de la page d'accueil avec ajout texte et bacjground entre autre

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-sky-300" >
     
     <header>
         <div class="p-50">
@@ -18,13 +18,21 @@
     </header>
 
     <main>
-        <div class="flex justify-center m-5">
-            <img src="/static/Minecraft.jpeg" alt="">
+        <div class="bg-white rounded-[15px] p-10 m-10">
+            <p>
+                Plonge dans l’univers de Minecraft avec ce test de personnalité unique !
+                Es-tu un amateur de la redstone, un bâtisseur ingénieux, un redoutable guerrier ou un paisible mineur ?
+                Réponds à quelques questions et découvre quel rôle te correspond le mieux dans ce monde cubique.
+                Que tu préfères miner des diamants, explorer le Nether ou créer des structures grandioses,
+                ce test révélera ta vraie nature de joueur Minecraft !
+            </p>
         </div>
         <div class="flex justify-center py-4 m-5">
             <a class="text-amber-950 font-bold test-2xl p-3 bg-green-700 hover:bg-green-800 border-white rounded-lg" href="/questions">Clique ici pour faire le test !</a>
         </div>
-        
+        <div class="flex justify-center m-10">
+            <img class="h-[250px] rounded-[15px] border border-gray-700 border-1.5" src="/static/Minecraft.jpeg">
+        </div>
     </main>
 
     <footer class="w-full fixed bottom-0">
