--- a/templates/resultat.html
+++ b/templates/resultat.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
-<body>
+<body class="bg-sky-300">
     <header>
         <div class="p-50">
             <h1 class="p-5 bg-green-700 text-3xl font-bold text-amber-950 text-center">
@@ -16,7 +17,7 @@
 
     <main>
         <div>
-            <img src="static/{{vainqueur}}.jpeg" alt="">
+            <img class="flex justify-center m-5"  src="/static/{{vainqueur}}.jpeg" alt="">
         </div>
         <div class="flex justify-center py-4 m-5">
             <a class="text-amber-950 font-bold test-2xl p-3 bg-green-700 hover:bg-green-800 border-white rounded-lg" href="/questions">Clique ici pour faire le test !</a>
